/* !!
 * File: rpc_error_codes.proto
 * File Created: Thursday, 27th May 2021 10:57:35 am
 * Author: KimEricko™ (phamkim.pr@gmail.com)
 * -----
 * Last Modified: Friday, 28th May 2021 9:57:24 am
 * Modified By: KimEricko™ (phamkim.pr@gmail.com>)
 * -----
 * Copyright 2018 - 2021 GTV, GGroup
 */

syntax = "proto3";

package g_proto;

option java_package = "vn.gtv.g_proto";
option java_outer_classname = "G_Proto";
option optimize_for = CODE_SIZE;

enum GTVRpcErrorCodes {
    ERROR_CODE_OK = 0;

    // Common data
    ERROR_BAD_REQUEST = 400000;
    ERROR_BIND_DATA = 400001;
    ERROR_DATA_INVALID = 400002;

    ERROR_BAD_WORD = 400003;

    // APP
    ERROR_NON_GTV_CLIENT = 403010;
    ERROR_MISSING_TOKEN = 403011;
    ERROR_TOKEN_INVALID = 403012;
    ERROR_REFRESH_TOKEN_INVALID = 403013;
    ERROR_EARLY_LOGIN = 403014;
    ERROR_UNKNOW_3RD_PROVIDER = 403015;
    ERROR_OAUTH_PROVIDER_ID_INVALID = 403016;
    ERROR_OAUTH_PROVIDER_ID_NOT_MATCH = 403017;
    ERROR_API_KEY_INVALID = 403018;
    ERROR_EARLY_CODE_INVALID = 403019;
    ERROR_URI_INVALID = 403020;
    ERROR_USER_WAS_BANNED = 403021;
    ERROR_TOKEN_LOCATION_WAS_CHANGED = 403022;
    ERROR_NEED_NEW_TOKEN = 403023;

    ERROR_REDIRECT_URI_NOT_ALLOWED = 420001;

    ERROR_GRANT_TYPE_INVALID = 400030;
    ERROR_CODE_CHALLENGE_OR_CLIENT_ID_INVALID = 400031;
    ERROR_CLIENT_ID_REACH_MAX_CONNECT_SESSION = 400032;
    ERROR_CLIENT_ID_INVALID = 403033;
    ERROR_REACH_MAX_CLIENT_ID = 400034;
    ERROR_IP_REACH_MAX_REGISTERED = 400035;
    ERROR_OAUTH_GET_USER_INFO = 400036;

    // User info
    ERROR_CAPTCHA = 400050;
    ERROR_ACCOUNT_LOCKED = 400051;
    ERROR_USER_LOGGED_IN = 400052;
    ERROR_LOGIN_INFO_INVALID = 400053;
    ERROR_ACCOUNT_ACTIVED = 400054;
    ERROR_ACCOUNT_NOT_EXISTED = 400055;
    ERROR_ACCOUNT_WAS_BANNED = 400056;

    ERROR_REGISTER_FAIL = 400060;
    ERROR_REACH_MAX_REGISTERED = 400061;

    ERROR_ACCOUNT_IN_ACTIVE = 400062;
    ERROR_ROLE_TITLE_EXISTED = 400063;

    ERROR_EASY_PASSWORD = 400080;
    ERROR_EASE_NEW_PASSWORD = 400081;
    ERROR_WRONG_PASSWORD = 400082;
    ERROR_PASSWORD_TYPE = 400083;
    ERROR_PASSWORD_INVALID = 400084;
    ERROR_PASSWORD_EXPIRED = 400085;
    ERROR_PASSWORD_RESET_CODE = 400086;
    ERROR_CHANGE_SAME_PASSWORD = 400087;
    ERROR_PASSWORD_LENGTH = 400088;

    ERROR_WRONG_USERNAME = 400100;
    ERROR_EMPTY_USERNAME_OR_PASSWORD = 400101;
    ERROR_USERNAME_TAKEN = 400102;
    ERROR_USERNAME_LENGTH = 400103;


    ERROR_WRONG_EMAIL_FORMAT = 400110;
    ERROR_EMAIL_NOT_MATCH = 400111;
    ERROR_EMAIL_TAKEN = 400112;
    ERROR_EMAIL_ACTIVED = 400113;
    ERROR_WRONG_MAIL = 400114;
    ERROR_EMAIL_EXISTED = 400115;


    ERROR_PHONE_NUMBER_TAKEN = 400120;
    ERROR_PHONE_NUMBER_INVALID = 400121;
    ERROR_PHONE_NUMBER_EXISTED = 400122;

    ERROR_DISPLAY_NAME_TAKEN = 400130;
    ERROR_DISPLAY_NAME_FORMAT_INVALID = 400131;

    ERROR_ADDRESS_INVALID = 400135;

    ERROR_PERMISSION_CREATE = 400140;
    ERROR_DISPLAY_NAME_CHANGE_PERMISSION = 400141;

    ERROR_UPLOAD_AVATAR = 400150;

    ERROR_UNKNOW_BIRD_DAY = 400155;

    // Friends
    ERROR_FRIEND_REQUESTED = 400160;
    ERROR_USER_WAS_NOT_FRIEND = 400161;
    ERROR_ADD_SELF_AS_FRIEND = 400162;
    ERROR_MAX_FRIENDS_REACH = 400163;
    ERROR_FRIEND_MAX_FRIENDS_REACH = 400164;

    ERROR_AUTHORIZE = 401000;
    ERROR_UNAUTHORIZED_USER = 401001;
    ERROR_USER_LOGGED_IN_SESSION_TIME_OUT = 401002;
    ERROR_AUTHORIZE_CODE_INVALID = 401003;
    ERROR_AUTHORIZE_CODE_EXPIRED = 401004;
    ERROR_SESSION_EXPIRED = 401005;
    ERROR_NOT_DEVELOPER_ACCOUNT = 401006;

    // ----------------- RANKING 15xx -----------------
    ERROR_RANKING_SEASON_NOT_FOUND = 4001500;
    ERROR_RANKING_PARTY_NOT_FOUND = 4001501;
    ERROR_RANKING_PARTY_WRONG_STATE = 4001502;

    ERROR_RANKING_USER_WRONG_STATE = 4001503;
    
    ERROR_RANKING_GAME_NOT_FOUND = 4001504;
    ERROR_RANKING_GAME_WRONG_STATE = 4001505;
    ERROR_RANKING_GAME_WAS_STARTED = 4001506;
    ERROR_RANKING_GET_RANK = 4001507;
    ERROR_RANKING_PLAYER_WAS_PENALIZED = 4001508;
    ERROR_RANKING_MEMBER_MAX_MATCHES = 4001509;

    ERROR_RANKING_LEADER_BOARD_NOT_FOUND = 4001510;
    ERROR_RANKING_PARTY_WAS_FULL = 4001511;


    // ---------------------------------------------------

    // ARENA 16xx
    ERROR_ARENA_EVENT_WRONG_STATE = 4001600;
    ERROR_ARENA_EVENT_NOT_FOUND = 4001601;
    ERROR_ARENA_EVENT_NOT_OPEN = 4001602;
    ERROR_ARENA_EVENT_WAS_STARTED = 4001603;
    ERROR_ARENA_EVENT_HISTORY_NOT_FOUND = 4001604;
    ERROR_ARENA_EVENT_WAS_FULL = 4001605;
    ERROR_ARENA_EVENT_CAN_NOT_REGISTER = 4001606;

    ERROR_ARENA_PARTY_WRONG_STATE = 4001610;
    ERROR_ARENA_PARTY_NOT_FOUND = 4001611;
    ERROR_ARENA_PARTY_WAS_REGISTERED = 4001612;
    ERROR_ARENA_PARTY_WAS_FULL = 4001614;
    ERROR_ARENA_PARTY_CAN_NOT_JOIN = 4001615;
    ERROR_ARENA_PARTY_NOT_OPEN = 4001616;
    ERROR_ARENA_PARTY_HISTORY_NOT_FOUND = 4001617;

    ERROR_ARENA_GAME_WRONG_STATE = 4001620;
    ERROR_ARENA_GAME_NOT_FOUND = 4001621;
    ERROR_ARENA_GAME_WAS_STARTED = 4001622;
    ERROR_ARENA_GAME_CAN_NOT_START = 4001623;
    ERROR_ARENA_GAME_NOT_FOUND_STATISTIC = 4001624;
    ERROR_ARENA_GAME_NOT_FOUND_RESULT = 4001625;

    ERROR_ARENA_STATISTIC_NOT_FOUND = 4001630;

    ERROR_ARENA_BET_HISTORY_NOT_FOUND = 4001640;
    ERROR_ARENA_BET_CAN_NOT_BET = 4001641;
    // ---------------------------------------------------

    // GAME OFFLINE 17xx
    ERROR_JOIN_SERVER = 400170;
    ERROR_NOT_OWNER = 400171;
    ERROR_EXISTED_OTHER_ROOM = 400172;
    ERROR_IN_ROOM_NOT_CREATED = 400173;
    ERROR_CREATE_SERVER = 400174;
    ERROR_NOT_FOUND_SERVER = 400175;
    ERROR_DUPLICATE_SERVER = 400176;

    ERROR_NOT_FOUND_EVENT = 400180;
    ERROR_EVENT_INVALID_STATE = 400181;
    ERROR_EVENT_WAS_STARTED = 400182;
    ERROR_PLAYER_WAS_INVITED = 400183;
    ERROR_PLAYER_WAS_JOINED = 400184;

    ERROR_NOT_FOUND_GAME = 400190;
    ERROR_GAME_INVALID_STATE = 400191;
    ERROR_GAME_WAS_STARTED = 400192;

    ERROR_MQTT = 400195;

    ERROR_NULL_ID = 400200;
    ERROR_ROOM_WAS_FULL = 400201;
    ERROR_UPGRADE_ROOM_NUMBER = 400202;
    ERROR_NOT_FOUND_ROOM = 400203;
    ERROR_NO_ROOM_VALID = 400204;
    ERROR_ROOM_ON_ARI = 400205;
    ERROR_EXISTED_IN_ROOM = 400206;
    ERROR_KICK_OWNER = 400207;
    ERROR_ROOM_DISAPPEAR = 400208;
    ERROR_ROOM_BLOCKED = 400209;
    ERROR_ROOM_WAS_EXPIRED = 400210;
    ERROR_PLAYER_WAS_LEFT = 400211;
    ERROR_PLAYER_WAS_WAITING = 400212;
    ERROR_NOT_ENOUGH_PLAYERS = 400213;

    ERROR_MOT_MATCH_SECRET_INVALID = 400215;

    ERROR_EXISTED_OTHER_GAME = 400300;
    ERROR_WRONG_POSITION = 400301;
    ERROR_IN_AOE = 400302;
    ERROR_IN_CS = 400303;
    ERROR_IN_WAR = 400304;
    ERROR_GROUP_FULL = 400305;
    ERROR_USER_PERMISSION = 400306;
    ERROR_USER_HIGH_LEVEL_REQUIRED = 400307;
    ERROR_USER_VIP_REQUIRED = 400308;

    // CHAT
    ERROR_DIRECT_CHAT_NOT_EXISTED = 400320;
    ERROR_DIRECT_CHAT_EXISTED = 400321;
    ERROR_CREATE_DIRECT_CHAT_WITH_SELF = 400322;
    ERROR_COULD_NOT_JOIN_DIRECT_CHAT = 400323;
    ERROR_ACCEPT_DIRECT_CHAT = 400324;
    ERROR_BLOCK_DIRECT_CHAT_FAIL = 400325;
    ERROR_UNBLOCK_DIRECT_CHAT_FAIL = 400326;
    ERROR_NOT_ABLE_TO_PUBLISH_MQTT = 400327;
    ERROR_NOT_ABLE_TO_SUBSCRIBE_MQTT = 400328;

    ERROR_IN_GAME_CHAT_NOT_EXISTED = 400330;
    ERROR_COULD_NOT_JOIN_IN_GAME_CHAT = 400331;

    ERROR_STATUS_INVALID = 400335;

    ERROR_CHANNEL_NOT_EXISTED = 400340;
    ERROR_COULD_NOT_JOIN_CHANNEL = 400341;
    ERROR_PUBLISH_INTERVAL_NOT_ALLOWED = 400342;

    ERROR_SYSTEM_MAINTENANCE = 400350;
    ERROR_IN_PROCESSING = 400351;

    ERROR_QUERY_PARAM = 400360;
    ERROR_EXCEED_LIMIT = 400361;

    ERROR_ACTION_INVALID = 400370;
    ERROR_ALREADY_CHECK_IN = 400371;

    // Transaction
    ERROR_ANOTHER_TRANSACTION_PROCESSING = 400380;
    ERROR_TRANSACTION_INVALID = 400381;

    // Order
    ERROR_ORDER_INVALID = 400390;
    // Item
    ERROR_ITEM_NOT_EXISTED = 400400;
    ERROR_OUT_OF_FREE_NUM = 400401;
    ERROR_ITEM_WAS_OWNED = 400402;
    ERROR_ITEM_IS_USING = 400403;
    ERROR_ITEM_IS_NOT_AVAILABLE = 400404;

    ERROR_SPIN_OUT_OF_TURN = 400405;
    ERROR_OUT_OF_SPIN = 400406;
    ERROR_MISSION_REWARD_ALREADY_RECEIVED = 400407;

    // Tournament
    ERROR_BRACKET_CREATED = 400420;
    ERROR_PLAYER_WAS_REGISTERED = 400421;
    ERROR_EMAIL_FORMAT_INVALID = 400422;
    ERROR_GET_DATA_FROM_DB = 400423;

    // New Post
    ERROR_POST_NOT_FOUND = 400430;
    ERROR_COMMENT_SPAM = 400431;
    ERROR_COMMENT_TOO_SHORT = 400432;

    ERROR_VERSION_IS_STABLE = 400440;
    ERROR_ENCRYPT = 400441;
    ERROR_UPLOAD_S3 = 400442;
    ERROR_REMOVE_S3 = 400443;

    // SERVER SIDE ERROR
    ERROR_OTHER = 500000;

    ERROR_CONNECT = 500001;
    ERROR_SAVE_DATA = 500002;
    ERROR_RETRIEVE_DATA = 500003;
    ERROR_NOT_FOUND = 500004;
    ERROR_GET_USER_INFO = 500005;
    ERROR_DELETE_DATA_FROM_CACHE = 500006;
    ERROR_NOTIFY_TOO_MUCH = 500007;
    ERROR_NOT_IMPLEMENTED = 500008;

    ERROR_ADD_NEW_VERSION = 500020;
    ERROR_VERSION_EXISTED = 500021;
    ERROR_VERSION_NOT_EXISTED = 500022;
    ERROR_VERSION_NOT_RELEASED = 500023;

    ERROR_UNMARSHAL_JSON = 500030;

    ERROR_ID_ALREADY_NOTIFIED = 500040;
    ERROR_ID_ALREADY_SCHEDULE = 500041;
    ERROR_SCHEDULE_INVALID = 500042;
    ERROR_EXTRACT_FILE = 500043;
    ERROR_REDIS_RUNTIME = 500044;

    ERROR_CREATE_ACCOUNT = 500045;
    ERROR_CREATE_TOKEN = 500046;
    ERROR_RESET_PASSWORD = 500047;
    ERROR_CREATE_EMAIL = 500048;

    ERROR_SERVER_CONFIG = 500060;
    ERROR_SERVER_LOGIC = 500070;
    ERROR_CONNECT_LOCAL_SERVICE = 500080;
    ERROR_INTERNAL = 500999;
}